--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^2.10.1",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "morgan": "^1.6.1",
+    "node-cache": "^3.0.0",
     "request-promise": "^0.4.3",
     "serve-favicon": "^2.3.0"
   },
