--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "echo 'No tests yet'",
+    "jshint": "jshint .",
+    "jscs": "jscs ."
   },
   "dependencies": {
     "bluebird": "^2.10.1",
@@ -18,9 +21,11 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-sass": "^2.0.4",
-    "gulp-nodemon": "^2.0.2",
     "gulp-livereload": "^3.8.0",
-    "gulp-plumber": "^1.0.0"
+    "gulp-nodemon": "^2.0.2",
+    "gulp-plumber": "^1.0.0",
+    "gulp-sass": "^2.0.4",
+    "jscs": "^2.2.0",
+    "jshint": "^2.8.0"
   }
 }
