--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
+    "express-validator": "^2.17.1",
     "jade": "^1.11.0",
     "morgan": "^1.6.1",
     "node-cache": "^3.0.0",
