--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "echo 'No tests yet'",
+    "test": "mocha ./test",
     "jshint": "jshint .",
     "jscs": "jscs ."
   },
@@ -14,19 +14,25 @@
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
     "express-validator": "^2.17.1",
-    "jade": "^1.11.0",
     "morgan": "^1.6.1",
     "node-cache": "^3.0.0",
     "request-promise": "^0.4.3",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
+    "chai": "^3.3.0",
+    "chai-as-promised": "^5.1.0",
     "gulp": "^3.9.0",
     "gulp-livereload": "^3.8.0",
     "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
     "gulp-sass": "^2.0.4",
+    "istanbul": "^0.3.21",
     "jscs": "^2.2.0",
-    "jshint": "^2.8.0"
+    "jshint": "^2.8.0",
+    "mocha": "^2.3.3",
+    "sinon": "^1.17.1",
+    "sinon-as-promised": "^4.0.0",
+    "sinon-chai": "^2.8.0"
   }
 }
