--- a/package.json
+++ b/package.json
@@ -9,15 +9,29 @@
     "jscs": "jscs ."
   },
   "dependencies": {
+    "angular": "^1.4.7",
+    "angular-route": "^1.4.7",
     "bluebird": "^2.10.1",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.3",
+    "css-loader": "^0.19.0",
     "express": "^4.13.3",
     "express-validator": "^2.17.1",
+    "file-loader": "^0.8.4",
+    "html-loader": "^0.3.0",
+    "imports-loader": "^0.6.4",
     "morgan": "^1.6.1",
+    "ng-annotate-webpack-plugin": "^0.1.2",
+    "ngtemplate-loader": "^1.3.1",
     "node-cache": "^3.0.0",
+    "node-sass": "^3.3.3",
     "request-promise": "^0.4.3",
-    "serve-favicon": "^2.3.0"
+    "sass-loader": "^3.0.0",
+    "serve-favicon": "^2.3.0",
+    "style-loader": "^0.12.4",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.2.0"
   },
   "devDependencies": {
     "chai": "^3.3.0",
@@ -25,8 +39,6 @@
     "gulp": "^3.9.0",
     "gulp-livereload": "^3.8.0",
     "gulp-nodemon": "^2.0.2",
-    "gulp-plumber": "^1.0.0",
-    "gulp-sass": "^2.0.4",
     "istanbul": "^0.3.21",
     "jscs": "^2.2.0",
     "jshint": "^2.8.0",
