--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node ./bin/www",
     "test": "mocha ./test",
     "jshint": "jshint .",
-    "jscs": "jscs ."
+    "jscs": "jscs .",
+    "postinstall": "gulp build"
   },
   "dependencies": {
     "angular": "^1.4.7",
@@ -18,6 +19,9 @@
     "express": "^4.13.3",
     "express-validator": "^2.17.1",
     "file-loader": "^0.8.4",
+    "gulp": "^3.9.0",
+    "gulp-livereload": "^3.8.0",
+    "gulp-nodemon": "^2.0.2",
     "html-loader": "^0.3.0",
     "imports-loader": "^0.6.4",
     "morgan": "^1.6.1",
@@ -36,9 +40,6 @@
   "devDependencies": {
     "chai": "^3.3.0",
     "chai-as-promised": "^5.1.0",
-    "gulp": "^3.9.0",
-    "gulp-livereload": "^3.8.0",
-    "gulp-nodemon": "^2.0.2",
     "istanbul": "^0.3.21",
     "jscs": "^2.2.0",
     "jshint": "^2.8.0",
