--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.9.0",
     "gulp-livereload": "^3.8.0",
     "gulp-nodemon": "^2.0.2",
+    "gulp-util": "^3.0.6",
     "html-loader": "^0.3.0",
     "imports-loader": "^0.6.4",
     "morgan": "^1.6.1",
