--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.3",
     "css-loader": "^0.19.0",
+    "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "express-validator": "^2.17.1",
     "file-loader": "^0.8.4",
