--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular-route": "^1.4.7",
     "bluebird": "^2.10.1",
     "body-parser": "^1.13.3",
+    "bootstrap-sass": "^3.3.5",
     "cookie-parser": "^1.3.3",
     "css-loader": "^0.19.0",
     "dotenv": "^1.2.0",
