Use Node 4.1 and implement template strings, enhanced object literals, and arrow functions.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "jscs": "jscs .",
     "postinstall": "gulp build"
   },
+  "engines": {
+    "node": ">= 4.0.0"
+  },
   "dependencies": {
     "angular": "^1.4.7",
     "angular-route": "^1.4.7",
