--- a/.jscsrc
+++ b/.jscsrc
@@ -1,5 +1,6 @@
 {
     "excludeFiles": ["node_modules/**", "public/components/**", "public/bundle.js"],
+    "esnext": true,
     "disallowEmptyBlocks": true,
     "disallowKeywordsOnNewLine": ["else"],
     "disallowKeywords": ["with"],
