--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-util": "^3.0.6",
     "html-loader": "^0.3.0",
     "imports-loader": "^0.6.4",
+    "lodash": "^3.10.1",
     "morgan": "^1.6.1",
     "ng-annotate-webpack-plugin": "^0.1.2",
     "ngtemplate-loader": "^1.3.1",
